# flask-mvc

./: .dockerignore  .editorconfig  .env.example  .gitignore  .tool-versions  Dockerfile  LICENSE  Makefile  Procfile  README  README.markdown  README.md  codecov.yml  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt  runserver.py  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: codeql.yml  main.yml  master.yml
project/: __init__.py  config.py  runserver.py
project/controller/: __init__.py  printer.py
project/controllers/: __init__.py  printer.py
project/models/: Printer.py  __init__.py  printer.py
project/project/: __init__.py
project/project/controller/: __init__.py
project/project/templates/: index.html  layout.html  print.html
project/project/views/: __init__.py
project/static/css/: style.css
project/templates/: layout.html  print.html
project/templates/errors/: 403.html  404.html  500.html
project/templates/layout/: layout.html  macros.html
project/templates/printer/: index.html  print.html
script/: setup  test
tests/: conftest.py  test_printer.py
